Second commit - path update

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
         <link href="https://fonts.googleapis.com/css2?family=Goblin+One&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="css/styles.css">
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
-        <script src="scripts.js"></script>
+        <script src="js/scripts.js" defer></script>
       </head>
 
       <body class="text-center">
@@ -37,10 +37,10 @@
             <div class="container">
               <div class="row">
                 <div class="col-md">
-                  <h2>This or That?</h2>
+                  <h2>The Great Wing Debate<br>This or That?</h2>
 
                   <div class="img-container">
-                    <img src="images/ranch.png" alt="Your choice of sauce" id="my_bd" class="sauce img-fluid">
+                    <img src="images/ranch.png" alt="Your choice of sauce" id="my_bg" class="sauce img-fluid">
                     <img src="images/drum.png" alt="Your choice of wing" id="my_image" class="wing img-fluid">
                   </div>
 
